<resources>
    <string name="app_name">My Application</string>
    <string name="login">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rememberMe">Remember me</string>
    <string name="signIn">sign in</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_user_list">UserListActivity</string>
</resources>
